[gd_scene load_steps=22 format=3 uid="uid://bvrv4nj8smlnl"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_ekj3v"]
[ext_resource type="Texture2D" uid="uid://dse0go285toy5" path="res://assets/sprites/ui/pause_button.png" id="2_46sj3"]
[ext_resource type="FontFile" uid="uid://cbisu3wechjp7" path="res://assets/font/monogram.ttf" id="2_bdr0s"]
[ext_resource type="FontFile" uid="uid://k6c44w3a31b6" path="res://assets/font/numbers.png" id="2_eacxm"]
[ext_resource type="Texture2D" uid="uid://bcqdei7tqwsru" path="res://assets/sprites/ui/pause_button_pressed.png" id="3_1womg"]
[ext_resource type="FontFile" uid="uid://db5au1lmpchl5" path="res://assets/font/boxy-bold.ttf" id="3_3lirm"]
[ext_resource type="Texture2D" uid="uid://cydf825kf5nlj" path="res://assets/sprites/ui/play_button.png" id="5_cp7kw"]
[ext_resource type="Texture2D" uid="uid://cmpucliiogid4" path="res://assets/sprites/ui/play_button_pressed.png" id="6_h3cge"]
[ext_resource type="Texture2D" uid="uid://c8sai2020a5ir" path="res://assets/sprites/ui/restart_button.png" id="9_aye3n"]
[ext_resource type="Texture2D" uid="uid://cgdb48847bmak" path="res://assets/sprites/ui/restart_button_pressed.png" id="10_3o47h"]

[sub_resource type="Animation" id="Animation_2wxm7"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.901961, 0.901961, 0.901961, 0.901961), Color(0.901961, 0.901961, 0.901961, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ReadyMargin:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ScoreMargin:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../GameOverAnchor:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-161, 960)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../RestartFade:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_waf8h"]
resource_name = "death_flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.94902, 0.94902, 0.94902, 0.901961), Color(0.94902, 0.94902, 0.94902, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ScoreMargin:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_t3855"]
resource_name = "game_over_reveal"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../GameOverAnchor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(-161, 960), Vector2(-161, 0)]
}

[sub_resource type="Animation" id="Animation_vmagh"]
resource_name = "game_ui_fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_42fek"]
resource_name = "ready_ui_fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ReadyMargin:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wc72r"]
resource_name = "restart_fade_to_black"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../RestartFade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1gykf"]
_data = {
"RESET": SubResource("Animation_2wxm7"),
"death_flash": SubResource("Animation_waf8h"),
"game_over_reveal": SubResource("Animation_t3855"),
"game_ui_fade_in": SubResource("Animation_vmagh"),
"ready_ui_fade_out": SubResource("Animation_42fek"),
"restart_fade_to_black": SubResource("Animation_wc72r")
}

[sub_resource type="InputEventKey" id="InputEventKey_siive"]
physical_keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_uq2t4"]
events = [SubResource("InputEventKey_siive")]

[sub_resource type="InputEventKey" id="InputEventKey_v641l"]
physical_keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_wnier"]
events = [SubResource("InputEventKey_v641l")]

[node name="GameUI" type="Control"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ekj3v")

[node name="Anim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../DeathFlash")
libraries = {
"": SubResource("AnimationLibrary_1gykf")
}

[node name="AnimFadeOut" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../DeathFlash")
libraries = {
"": SubResource("AnimationLibrary_1gykf")
}

[node name="ScoreMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ScoreMargin"]
layout_mode = 2
mouse_filter = 2

[node name="Score" type="Label" parent="ScoreMargin/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_eacxm")
theme_override_font_sizes/font_size = 72
horizontal_alignment = 1

[node name="PauseButton" type="TextureButton" parent="ScoreMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
keep_pressed_outside = true
shortcut = SubResource("Shortcut_uq2t4")
shortcut_in_tooltip = false
texture_normal = ExtResource("2_46sj3")
texture_pressed = ExtResource("3_1womg")

[node name="PlayButton" type="TextureButton" parent="ScoreMargin"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
shortcut = SubResource("Shortcut_wnier")
shortcut_in_tooltip = false
texture_normal = ExtResource("5_cp7kw")
texture_pressed = ExtResource("6_h3cge")

[node name="ReadyMargin" type="MarginContainer" parent="."]
unique_name_in_owner = true
process_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ReadyMargin"]
layout_mode = 2
mouse_filter = 2

[node name="GetReadyMargin" type="MarginContainer" parent="ReadyMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_top = 200

[node name="GetReadyLabel" type="Label" parent="ReadyMargin/VBoxContainer/GetReadyMargin"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bdr0s")
theme_override_font_sizes/font_size = 100
text = "Get Ready"
horizontal_alignment = 1

[node name="ControlsMargin" type="MarginContainer" parent="ReadyMargin/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 200

[node name="Label" type="Label" parent="ReadyMargin/VBoxContainer/ControlsMargin"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bdr0s")
theme_override_font_sizes/font_size = 80
text = "SPACE/LMB -> 
Splash! (TODO)"
horizontal_alignment = 1

[node name="GameOverAnchor" type="Node2D" parent="."]
position = Vector2(-161, 960)

[node name="GameOverMargin" type="MarginContainer" parent="GameOverAnchor"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -290.0
offset_top = -110.0
offset_right = 1252.0
offset_bottom = 930.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverAnchor/GameOverMargin"]
layout_mode = 2
mouse_filter = 2

[node name="InnerMargin" type="MarginContainer" parent="GameOverAnchor/GameOverMargin/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 280
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 280

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverAnchor/GameOverMargin/VBoxContainer/InnerMargin"]
layout_mode = 2
mouse_filter = 2

[node name="GameOverLabel" type="Label" parent="GameOverAnchor/GameOverMargin/VBoxContainer/InnerMargin/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = -20
theme_override_fonts/font = ExtResource("3_3lirm")
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="GameOverAnchor/GameOverMargin/VBoxContainer/InnerMargin/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOverAnchor/GameOverMargin/VBoxContainer/InnerMargin/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="GameOverAnchor/GameOverMargin/VBoxContainer/InnerMargin/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="ScoreLabel" type="Label" parent="GameOverAnchor/GameOverMargin/VBoxContainer/InnerMargin/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bdr0s")
theme_override_font_sizes/font_size = 60
text = "Score: "
horizontal_alignment = 2

[node name="ScoreActual" type="Label" parent="GameOverAnchor/GameOverMargin/VBoxContainer/InnerMargin/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bdr0s")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 2

[node name="BestLabel" type="Label" parent="GameOverAnchor/GameOverMargin/VBoxContainer/InnerMargin/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bdr0s")
theme_override_font_sizes/font_size = 60
text = " Best: "
horizontal_alignment = 2

[node name="BestActual" type="Label" parent="GameOverAnchor/GameOverMargin/VBoxContainer/InnerMargin/VBoxContainer/PanelContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bdr0s")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 2

[node name="ButtonMargin" type="MarginContainer" parent="GameOverAnchor/GameOverMargin/VBoxContainer/InnerMargin/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 60

[node name="RestartButton" type="TextureButton" parent="GameOverAnchor/GameOverMargin/VBoxContainer/InnerMargin/VBoxContainer/ButtonMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("9_aye3n")
texture_pressed = ExtResource("10_3o47h")

[node name="DeathFlash" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.901961, 0.901961, 0.901961, 0.901961)

[node name="RestartFade" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="ScoreMargin/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="ScoreMargin/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="GameOverAnchor/GameOverMargin/VBoxContainer/InnerMargin/VBoxContainer/ButtonMargin/RestartButton" to="." method="_on_restart_button_pressed"]
